# complementary-rs

./: Cargo.toml  README.md
assets/maps/: level_select.json  map001_intro_SWITCH.json  map002.json  map003_intro_SPIKES.json  map004.json  map005_intro_SWITCHING_SPIKES.json  map006_intro_DASH.json  map007_intro_WALLJUMP.json  map008_intro_DOOR.json  map009_intro_GREY.json  map010.json  map011_intro_moving_platform.json  map012_intro_DOUBLE_JUMP_GLIDER.json  map013_DOUBLEJUMP_GLIDER.json  map014_intro_WIND.json  map015_hard_jumps.json  map016.json  map017_the_wall.json  map018.json  map019.json  map020_hard_GRAY.json  map021.json  map022.json  map023.json  map024_the_harder_wall.json  map025_DOUBLEJUMP_GLIDER_hard.json  map026.json  map027_WIND_hard.json  map028.json  map029.json
assets/particlesystems/: background.json  colorblock.json  dash.json  death.json  dissolve.json  door.json  glider.json  goal.json  jump.json  key.json  loseability.json  newability.json  switch.json  switchobjectOFF.json  switchobjectON.json  test.json  titleeffect.json  walk.json  walljump.json  walljumpside.json  wallstick.json  wind.json
complementary/: Cargo.toml
complementary/src/: audio.rs  game.rs  imgui_sdl2_support.rs  input.rs  level.rs  main.rs  math.rs  player.rs  rendering.rs  tilemap.rs  window.rs
complementary/src/objects/: ability_block.rs  door.rs  key.rs  level_tag.rs  mod.rs  particle_system.rs  platform.rs  tutorial.rs  wind.rs
complementary/src/shaders/: ability_block.wgsl  door.wgsl  key.wgsl  particle.wgsl  platform.wgsl  tilemap.wgsl
complementary_data_converter/: Cargo.toml
complementary_data_converter/src/: main.rs  objects.rs
complementary_macros/: Cargo.toml
complementary_macros/src/: lib.rs
src/: game.rs  imgui_helpers.rs  input.rs  level.rs  main.rs  math.rs  player.rs  rendering.rs  tilemap.rs  window.rs
src/shaders/: player.wgsl  tilemap.wgsl
