[workspace]
members = ["complementary", "complementary_macros", "complementary_data_converter"]
# Required to fix a wgpu compile error:
# "DX12 API enabled on non-Windows OS. If your project is not using resolver="2" in Cargo.toml, it should."
resolver = "2"

[profile.release]
lto = false
#panic = 'abort'
rpath = true
